Changes z-index of toastr to get it in front; Fixes some error messages

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -37,6 +37,10 @@ h2 {
   }
 }
 
+#toast-container {
+  z-index: 100000;
+}
+
 /************************/
 /*CUSTOM PARALLAX IMAGE*/
 /************************/
